--- a/main.html
+++ b/main.html
@@ -1,1 +1,28 @@
+<html>
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+	<!-- the entire body must be written by student -->
+	<div class="body">
+	<div class="main">
+	<div class="sec1">
+		<p><strong>Name:</strong>Mayur Pagare</p>
+		<p><strong>Profile:</strong>Software Developer</p>
+		<p><strong>Email:</strong>mayur@18gmail.com</p>
+		<h2>Skills</h2>
+		
+	</div>
+
+	<div class="sec2">
+		<h2>About me</h2>
+		<p>I am a self vdwhb fbjdbf dbfjdbf fbbfbdcbd bd bfb</p>
+	</div>
+	</div>
+	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+</html>
